# torch-insightface

./: .gitignore  README.md  convert_to_onnx.sh  evaluate_onnx.sh  pyproject.toml  train.sh  train_arc.sh  train_edge.sh  train_ghost.sh
arcface_lightning/: train.py
arcface_lightning/configs/: __init__.py  base.py  ms1mv3_r100.py  ms1mv3_r50.py
arcface_lightning/data/: __init__.py  dataset.py  lfw_dataset.py  test_datamodule.py  verification_dataset.py
arcface_lightning/lightning_utils/: __init__.py  callbacks.py
arcface_lightning/models/: lr_scheduler.py  module.py
arcface_lightning_v2/: README.md  train.py
arcface_lightning_v2/configs/: __init__.py  ms1mv3_r100.py  ms1mv3_r50.py
arcface_lightning_v2/data/: __init__.py  datamodule.py  dataset.py  lfw_dataset.py
arcface_lightning_v2/lightning/: __init__.py  callbacks.py  config.py
arcface_lightning_v2/lightning_utils/: callbacks.py  config.py
arcface_lightning_v2/models/: __init__.py  losses.py  lr_scheduler.py  module.py  partial_fc_v2.py
datasets/: count_ms1m_arcface.py  lfw.py  pairs.txt
edgeface_lightning/: README.md  train.py
edgeface_lightning/configs/: __init__.py  base.py  edgeface_base.py  edgeface_s_gamma_05.py  edgeface_xs.py  edgeface_xs_cosface.py  edgeface_xs_gamma_06.py
edgeface_lightning/data/: __init__.py  (+1 more)
ghostface_lightning/: README.md  __init__.py  train.py
ghostfacenet_lightning/: README.md  config.py  train.py
ghostfacenets_lightning/: __init__.py  config.py  example_train.sh  requirements.txt  train.py
new/: README.md  test_model.py  train.py  verify_structure.py
(+57 files in other folders)
