[project]
name = "torch-insightface"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deeplake==3.9.46",
    "jsonargparse[signatures]>=4.27.7",
    "lightning>=2.6.0",
    "omegaconf>=2.3.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]
