[project]
name = "torch-insightface"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "easydict>=1.13",
    "lightning>=2.6.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "torchvision>=0.24.1",
    "wandb>=0.23.0",
]
