[project]
name = "torch-insightface"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lightning>=2.3.3",
    "onnxruntime>=1.20.1",
    "onnxruntime-gpu>=1.20.2",
    "onnxscript>=0.2.7",
    "scikit-learn>=1.3.2",
    "torchvision>=0.20.1",
    "wandb>=0.23.1",
]
